WIP Fix homepage Intro section sizing on mobile

--- a/src/styles/Intro.module.css
+++ b/src/styles/Intro.module.css
@@ -1,3 +1,9 @@
+.intro {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
 .heading {
     /* Hello, */
     & h2 {
@@ -9,8 +15,7 @@
     
     /* Name */
     & h1 {
-        font-size: 3rem;
-        font-weight: 600;
+        font-size: 2.75rem;
         margin: 0;
         padding: 0;
         color: var(--color-accent);
@@ -51,12 +56,27 @@
 }
 
 @media screen and (max-width: 576px) {
+    .intro {   
+        align-items: center;
+        justify-content: center;
+    }
+
     .activitiesWrapper {
         column-gap: 0.5rem;
         
         & > div {
             flex-direction: column;
-            row-gap: 0.5rem;
+            justify-content: center;
+            align-items: center;
+
+            &:nth-of-type(2) {
+                display: none;
+            }
         }
+    }
+
+    .activity {
+        width: fit-content;
+        text-align: center;
     }
 }
